# mcp-pubmed-evidence

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  maintenance.md
.github/workflows/: ci.yml  version-check.yml
docs/: RELEASE_CHECKLIST.md
examples/: build_biomedical_evidence_table.py  claude_desktop_config.json  mcp_list_tools.py  mcp_stdio_config.json  sample_biomedical_evidence_table.json  sample_search_output.json  sample_trial_output.json  search_pubmed.py  search_trials.py
src/mcp_pubmed_evidence/: __init__.py  audit.py  bibtex.py  citation.py  clinicaltrials.py  evidence_models.py  evidence_table.py  models.py  openalex.py  pubmed.py  safety.py  server.py  trial_models.py
tests/: test_audit.py  test_citation.py  test_clinicaltrials.py  test_evidence_table.py  test_openalex.py  test_pubmed.py  test_safety.py  test_server.py
tools/: bump_version.py  check_version.py
